<resources>
    <string name="app_name">ShoPRO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="category_prompt">Choose a category</string>
    <string name="database_name">todo.db</string>
    <string name="error_product_handler">The activity does not implement the ProductHandlerInterface</string>
    <string name="edit_product">Edit product</string>
    <string name="new_product">New product</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="zero">0</string>
    <string name="error_empty_field">This field can not be empty</string>
    <string name="greeting">Helllooo</string>
    <string name="estimated_price_hint">Estimated Price $</string>
    <string name="description_hint">Description</string>
    <string name="title_hint">Title</string>
    <string name="category_text">Category:</string>
    <string name="delete">Delete</string>


    <string-array name="category_arrays">
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Electronics</item>
        <item>Cleaning</item>
        <item>Other</item>
    </string-array>


</resources>
