<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#fff6a0"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivRowIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:src="@drawable/plus"
            card_view:layout_constraintBottom_toTopOf="@+id/btnEdit"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cbProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toTopOf="@+id/btnDelete"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"

            android:layout_height="0dp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeTextType="uniform"

            android:textSize="30sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/ivRowIcon"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@id/tvDescription"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:text="@string/zero"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/cbProduct"
            card_view:layout_constraintEnd_toStartOf="@+id/cbProduct"
            card_view:layout_constraintStart_toEndOf="@+id/tvDescription"
            card_view:layout_constraintTop_toTopOf="@+id/cbProduct" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeTextType="uniform"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/btnDelete"
            card_view:layout_constraintStart_toEndOf="@+id/ivRowIcon"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/ivRowIcon"
            card_view:layout_constraintStart_toStartOf="@+id/ivRowIcon"
            card_view:layout_constraintTop_toBottomOf="@+id/ivRowIcon"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>